Projects/MN Ballroom/css/styles.css
/*background-image: linear-gradient(to right, #000000, #0e0546, #3046C5);*/
:root {
    --blue: #05115a;
    --lightyellow: rgb(5, 252, 128);
}


* {
    box-sizing: border-box;
    margin-bottom: 0;
    padding: 0;
    font-family: 'M PLUS 2', sans-serif;
}

.nav-container {
    width: 100%;
    background-color: black;
}

#MN {
    position: absolute;
    right:0;
    height: 600px;
    padding: 10px;
  }

.navbar {
    display: grid;
    grid-template-columns: 0.2fr auto 1fr;
    align-items:center;
    height: 130px;
    width: 95%;
    max-width: 1720px;
    margin: 0 auto;
    padding:0;
}

img#navbar-logo.img-fluid {
    margin: 3%;
}

#navbar-logo {
    cursor: pointer;
    width: 100%;
    padding: 0;
    margin-left: 5%;
    margin-top: -8%;
}

.nav-menu {
    display: grid;
    position: absolute;
    grid-template-columns: repeat(6, auto);
    list-style: none;
    text-align:center;
    width: 60%;
    justify-self: end;
}

.nav-links {
    color:white;
    text-decoration: none;
    font-size: 19px;
    display: inline;
    letter-spacing: 1px;
    
}

.nav-links:hover {
    color:var(--lightyellow);
    transition: all 0.2s ease-out; 
}

.nav-links-btn {
    background-color: transparent;
    border: solid 2px white;
    padding: 7px 18px;
    border-radius: 1px;

}

.nav-links-btn {
    transition: box-shadow 900ms ease-in-out, color 400ms ease-in-out;
  }
    .nav-links-btn:hover {
      color: black;
      background-color: rgb(5, 252, 128);
      animation: ease-out;
      animation-duration: 2s;
      
    }

    /*.nav-links-btn:active {
        font-weight: bolder;
    }*/

body {
    background-color: black; 
    
}

.menu-toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
    background: var(--blue);
}

@media screen and (max-width: 768px) {
    .nav-container {
        position: relative;
        width: 100%;
        display:block;
    }
    
    nav.navbar {
        height:80px;
    }

    .nav-menu {
        display: grid;
        grid-template-columns: auto; 
        margin:0;
        width: 100%;
        position:absolute;
        top: 100px;
        down: -100%;
        opacity: 0;
        transition: all 0.5s ease;
    }

    #navbar-logo {
        margin-left:20px;
        font-size: 24px;
    }

    .nav-menu.active {
        background-color: black;
        left: 0;
        opacity: 1;
        transition: all 0.5s ease;
        z-index:3;
    }

    a.nav-links {
        margin:0;
    }

    .nav-links {
        text-align: center;
        line-height: 60px;
        width: 100%;
        display: table;
    }

    .nav-links:hover {
        background-color: tranparent;
        color: rgb(5, 252, 128);
        transition: all 0.4s ease-out;
        color: var(--lightyellow);
    }

    .navbar {
        width: 100%;
    }

    img#navbar-logo.img-fluid {
        margin:15px 10px;
    }

    .nav-links-btn {
        border: none;
        padding: 0;
        background-color: transparent;
        justify-self: center;
        transition: all 0.4s ease-out;
    }

    .nav-links-btn:hover {
        border: none;
        padding: 0;
        background-color: transparent;
        justify-self: center;
        width:100%;
        transition: all 0.4s ease-out;
        margin:0;
    }

    #mobile-menu {
        position: absolute;
        top:20%;
        right:5%;
        transform: translate(5%, 20%);
    }

    .menu-toggle .bar {
        width: 30px;
        background-color: white;
        display: block;
        cursor: pointer;
    }

    .menu-toggle:hover {
        cursor: pointer;
    }

    #mobile-menu.is-active .bar:nth-child(2) {
        opacity:0;
    }

    #mobile-menu.is-active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    #mobile-menu.is-active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    ul.nav-menu.active {
        padding: 0;
    }

    #main-picture {
        z-index: 1;
      }
    
    #quote {
        z-index: 2;
    }

    .nav-menu-aboutus.active {
        background-image: linear-gradient(to left, #000000, #050f46, #0f0874, #473dd4);
    }
}

.row {
    width:100%;
}

div.row {
    margin: 15px 0 0 0;  
}

div.col {
    margin-top: 50px;
}

#quote {
    margin: 10% 5% 15% 5%;
    width: 60%;
    padding: 10px;
    text-align: center;
    z-index: 2;
  }

  .quote {
    padding:30px;
    color:white;
    font-family: 'Cormorant Garamond', serif;
  }

  #main-picture {
    z-index: 1;
  }

  .aboutus-body, .services-body, .contact-body {
    background-image: linear-gradient(to left, #000000, #050f46, #0f0874, #473dd4);
      color: rgb(255, 255, 255);
      text-align: center;
      box-sizing: border-box;
  }

  .container-fluid-header {
      padding-top: 25px;
      padding-bottom: 20px;
  }

  #instructor1, #instructor2 {
      max-height: 500px;
      align-self: center;
  }
    
  #misha-description {
      margin: auto;
      margin-right: 5%;
      font-family:Arial, Helvetica, sans-serif;
      font-size: 19px;
  }
  
  .img-responsive {
    max-width: 70%; /* or to whatever you want here */
    max-height: auto; /* or to whatever you want here */
  }

  
  #natasha-description {
      margin: auto;
      margin-left: 5%;
      font-family:Arial, Helvetica, sans-serif;
      font-size: 19px;
  }

  #instructor2 {
      margin-top: 10px;
  }

  #natasha-photo {
      margin-bottom: 20px;
  }

  #aboutus-container, #services-container, #contact-container {
      background-color: transparent;
  }

  #carousel-container {
    margin:5%;
    width:60%;
    margin-left: auto;
    margin-right: auto;
}

    #carouselButton {
        position: relative;
        bottom: 0;
        margin-left: auto;
        margin-right: auto;;
        z-index: 100;
        color:rgb(5, 252, 128);
        border: .3px solid rgb(162, 152, 206);
    }

    #carouselButton:active {
        background-color: rgb(5, 252, 128);
        color: black;
        border:.3px solid rgb(255, 255, 255);
    }

    .carousel-inner > .carousel-item > img {    
    height: 600px;
    margin: auto;
    }
    
    div.carousel-indicators {
        margin-bottom: 10%;
    }
    
    .our-address {
        margin:auto;
        padding:10px;
    }

    .btn-link {
        color:white;
        background:transparent;
        text-decoration: none;
    }

    .form1 {
        margin:auto;
    }

    div.address {
        margin-top: 0;
    }

    footer.site-footer {
        padding-top: 20px;
        margin:auto;
    }

